--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -7,13 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.9', '3']
 
     steps:
     - name: Install the zmq library
+      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt update
         sudo apt install libzmq3-dev
