--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -43,6 +43,7 @@ jobs:
       with:
         name: coverage-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.python-version }}
         path: .coverage.*
+        include-hidden-fils: true
     - name: Run the Python linter
       run: |
         prospector
