--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -32,23 +32,17 @@ jobs:
     - name: Run the unit tests
       run: |
         coverage run -p -m unittest discover -b tests
-    - name: Debug coverage files
+    - name: Run the Python linter
       run: |
-        echo "Current working directory: $(pwd)"
-        echo "Contents:"
-        find . -name ".coverage*" -ls || echo "No coverage files found"
-      shell: bash
+        prospector
     - name: Upload coverage artifact
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.python-version }}
         path: .coverage.*
         include-hidden-files: true
-    - name: Run the Python linter
-      run: |
-        prospector
 
-  combine-coverage:
+  upload-coverage:
     runs-on: ubuntu-latest
     needs: build
     steps:
