--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -7,13 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.9', '3']
 
     steps:
     - name: Install the zmq library
+      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt update
         sudo apt install libzmq3-dev
@@ -30,14 +32,38 @@ jobs:
     - name: Run the unit tests
       run: |
         coverage run -p -m unittest discover -b tests
-        coverage combine
-        coverage report
-    #    coverage xml
-    #- name: Upload coverage reports to Codecov
-    #  uses: codecov/codecov-action@v4.0.1
-    #  with:
-    #    token: ${{ secrets.CODECOV_TOKEN }}
-    #    slug: discos/DISCOSClient
     - name: Run the Python linter
       run: |
         prospector
+    - name: Upload coverage artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.python-version }}
+        path: .coverage.*
+        include-hidden-files: true
+
+  upload-coverage:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3'
+        check-latest: true
+    - name: Download coverage artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+    - name: Combine coverage files
+      run: |
+        python -m pip install -r testing_requirements.txt
+        find artifacts -name ".coverage.*" -exec mv {} . \;
+        coverage combine
+        coverage xml
+        coverage report
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
