--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -22,8 +22,7 @@ jobs:
         check-latest: true
     - name: Install dependencies
       run: |
-        python -m pip install -r requirements.txt
-        python -m pip install -r testing_requirements.txt
+        python -m pip install ".[test]"
     - name: Run the unit tests
       run: |
         coverage run -p -m unittest discover -b tests
@@ -53,7 +52,7 @@ jobs:
         path: artifacts
     - name: Combine coverage files
       run: |
-        python -m pip install -r testing_requirements.txt
+        python -m pip install ".[test]"
         find artifacts -name ".coverage.*" -exec mv {} . \;
         coverage combine
         coverage xml
