--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -61,3 +61,19 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+
+  build-doc:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3'
+        check-latest: true
+    - name: Build documentation
+      run: |
+        python -m pip install ".[docs]"
+        sphinx-build -W -b html docs doc/_build/html
+        sphinx-build -W -b doctest docs doc/_build/doctest
+        sphinx-build -W -b linkcheck docs doc/_build/linkcheck
