--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -74,6 +74,6 @@ jobs:
     - name: Build documentation
       run: |
         python -m pip install ".[docs]"
-        sphinx-build -W -b html docs doc/_build/html
-        sphinx-build -W -b doctest docs doc/_build/doctest
-        sphinx-build -W -b linkcheck docs doc/_build/linkcheck
+        sphinx-build -W -b html docs docs/_build/html
+        sphinx-build -W -b doctest docs docs/_build/doctest
+        sphinx-build -W -b linkcheck docs docs/_build/linkcheck
