--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install ".[test]"
     - name: Run the unit tests
+      shell: bash
       run: |
         for attempt in 1 2 3; do
           if coverage run -p -m unittest discover -b tests; then
