--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04, windows-latest]
         #os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3']
+        python-version: ['pypy3.9', 'pypy3']
 
     steps:
     - uses: actions/checkout@v4
