--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -11,10 +11,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, windows-latest]
-        #os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['pypy3.9', 'pypy3']
-
+        include:
+          - os: ubuntu-latest
+            python-version: pypy3.9.4
+          - os: ubuntu-latest
+            python-version: pypy3.11
+          - os: windows-latest
+            python-version: 3.9.4
+          - os: windows-latest
+            python-version: 3
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
