--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -11,22 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            python-version: pypy3.9
-          - os: ubuntu-latest
-            python-version: pypy3.11
-          - os: windows-latest
-            python-version: 3.9.4
-          - os: windows-latest
-            python-version: 3
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        py: ['3.9', '3.11']
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
-        check-latest: true
+        python-version: ${{ startsWith(matrix.os, 'windows') && matrix.py || format('pypy-{0}', matrix.py) }}
     - name: Install dependencies
       run: |
         python -m pip install ".[test]"
